fix: stretch height of conv list

--- a/web/src/routes/root/index.css
+++ b/web/src/routes/root/index.css
@@ -117,7 +117,7 @@
 
 .conv-list {
   display: flex;
-  /* min-height: 100%; */
+  height: 100%;
   flex-direction: column;
   overflow: auto;
   scrollbar-color: var(--border-color) transparent;
